# wem-energy-cost-model

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  migrate.yml
.streamlit/: config.toml  secrets.toml.example
app/: __init__.py  config.py  main.py  streamlit_app.py
app/assets/: __init__.py  defaults.py  models.py  repository.py
app/assumptions/: __init__.py  audit.py  io.py  models.py  repository.py  seeds.py
app/db/: models.py  projects.py  session.py
app/exports/: __init__.py  excel_export.py  pdf_export.py
app/financial/: __init__.py  cashflow.py  emissions.py  metrics.py  ppa.py  sensitivity.py  stakeholder.py  tariff.py
app/models/: __init__.py  capex.py  uncertainty.py
app/optimisation/: auto_size.py  bess.py  capacity.py  dispatch.py  engine.py  ev_fleet.py  fcess.py  genset.py  load_flex.py  rcm.py  solar.py
app/optimiser/: __init__.py  lp_model.py
app/pages/: 1_📥_Data_Status.py  2_📋_Project_Designer.py  3_📈_Results.py  4_📊_Reports.py  5_⚙️_Assumptions.py
app/pipeline/: __init__.py  aemo_client.py  alerts.py  backfill.py  capacity_price_connector.py  fcess_connector.py  forward_price_connector.py  health.py  ingest.py  interval_import.py  scheduler.py  schemas.py  transform.py  wholesale_price_connector.py
app/simulation/: __init__.py  monte_carlo.py
app/tariff/: __init__.py
app/ui/: assumptions.py  auth.py  charts.py  comparison.py  interval_upload.py  nav.py  session.py
db/: alembic.ini  env.py  models.py  seed.py  session.py
db/migrations/: README
db/migrations/versions/: 20260401000000_initial_schema.py  20260401000001_extended_schema.py  20260402000000_add_interval_data_table.py
docs/: aemo_wa_api_mapping.md  deployment.md  developer-guide.md  user-guide.md  wem-fcess-rules.md  western-power-tariffs.md
financial/: __init__.py  cashflow.py  tariff.py
migrations/: env.py
migrations/versions/: 20260331000000_initial_schema.py  20260401000001_create_fcess_prices.py  20260401000002_add_assumption_tables.py  20260401120000_add_assumption_tables.py  20260401130000_add_assets_table.py  20260402000000_add_interval_data_table.py  20260403000000_add_pipeline_tables.py  20260404000000_add_assumption_audit_log.py
optimisation/: bess.py  model.py
pipeline/: __init__.py  aemo_wholesale.py  interval_import.py
scripts/: create_labels.sh
tests/: conftest.py  test_aemo_api_mapping.py  test_aemo_client.py  test_aemo_wholesale.py  test_assets.py  test_assumption_audit.py  test_assumption_io.py  test_assumptions.py  test_auto_size.py  test_backfill.py  test_bess.py  test_bill_validation.py  test_capacity.py  test_capacity_price_connector.py  test_cashflow.py  test_charts.py  test_comparison.py  test_config.py  test_db_models.py  test_dispatch.py  test_dispatch_profile_chart.py  test_emissions.py  test_ev_fleet.py  test_exports.py  test_extended_schema.py  test_fcess.py  test_fcess_connector.py  test_financial_metrics.py  test_forward_price_connector.py  test_genset.py  test_gridcog_benchmark.py  test_interval_import.py  test_load_flex.py  test_migration_72.py  test_monte_carlo.py  test_optimisation.py  test_pipeline.py  test_pipeline_health.py  test_pipeline_schemas.py  test_ppa.py  (+9 more)
tests/fixtures/bills/: RT2_synthetic_bill_202507.json  RT5_synthetic_bill_202507.json
tests/fixtures/interval_data/: BalancingSummary_20240115.csv  CapacityCreditPrices_2024.csv  FCESSPrice_CONTINGENCY_RESERVE_LOWER_20240115.csv  FCESSPrice_CONTINGENCY_RESERVE_RAISE_20240115.csv  FCESSPrice_REGULATION_LOWER_20240115.csv  FCESSPrice_REGULATION_RAISE_20240115.csv  FCESSPrice_ROCOF_CONTROL_SERVICE_20240115.csv  RT2_synthetic_202507.csv  RT5_synthetic_202507.csv
tests/integration/: __init__.py  test_data_pipeline.py
tests/unit/: test_config.py  test_db_session.py  test_engine.py  test_financial_cashflow.py  test_financial_metrics.py
tests/validation/: gridcog_benchmark.py  gridcog_benchmark_results.md  gridcog_reference_cases.py  plot_dispatch_profiles.py  revenue_breakdown.py  revenue_breakdown_results.md  tariff_bill_results.md  tariff_bill_validation.py
