[project]
name = "wem-energy-cost-model"
version = "0.1.0"
description = "WEM Energy Cost Modelling Tool — AEMO WA data pipeline, Pyomo optimisation, Streamlit app"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # Web / UI
    "streamlit>=1.33",
    "plotly>=5.20",
    "kaleido>=0.2.1",   # required for plotly static PNG/SVG export (#42)
    # Data
    "pandas>=2.2",
    "numpy>=1.26",
    "numpy-financial>=1.0",  # NPV, IRR — numpy.irr/npv removed in numpy 2.0 (#34)
    "httpx>=0.27",
    "aiohttp>=3.9",
    # Database
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    # Optimisation
    "pyomo>=6.7",
    "highspy>=1.7",   # HiGHS solver (open-source, no extra install needed)
    # Financial
    "scipy>=1.13",
    # Reporting
    "reportlab>=4.0",  # pure-Python PDF generation (#43) — avoids libpango dep of weasyprint
    "openpyxl>=3.1",   # Excel export (#43)
    # Config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--ignore=app/main.py"
testpaths = ["tests"]
asyncio_mode = "auto"
