[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wem-energy-cost-model"
version = "0.1.0"
description = "WEM Energy Cost Modelling Tool — AEMO WA data pipeline, Pyomo optimisation, Streamlit app"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # Web / UI
    "streamlit>=1.33",
    "streamlit-authenticator==0.3.3",
    "plotly>=5.20",
    # Data
    "pandas>=2.2",
    "numpy>=1.26",
    "numpy-financial>=1.0",
    "httpx>=0.27",
    "aiohttp>=3.9",
    # Database
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    # Optimisation
    "pyomo>=6.7",
    # Financial
    "scipy>=1.13",
    # Reporting
    "reportlab>=4.0",
    "openpyxl>=3.1",
    # Config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests",
    "aiosqlite>=0.19.0",
    # Explicit CI install — numpy-financial is in main deps but listed here
    # to guarantee it is present in the test environment regardless of any
    # editable-install resolution quirks (fixes #90).
    "numpy-financial>=1.0",
]
export = [
    "kaleido>=0.2.1",
]
solver = [
    "highspy>=1.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--ignore=app/main.py"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require external services or live DB)",
    "validation: marks tests as GridCog benchmark validation tests",
]
